unpackaged/objects/copado__Branch_Management_Permission__c.object
<CustomObject>
	<description>This object stores the permissions relating to a user per environment</description>
	<fields>
		<fullName>copado__Allow_Deployments__c</fullName>
		<defaultValue>true</defaultValue>
		<label>Allow Deployments</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipName>Branch_Management_Permissisions</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__User__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Branch_Management_Permissisions</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Pipeline Permission</label>
	<nameField>
		<displayFormat>BMP-{000000}</displayFormat>
		<label>Pipeline Permission Ref</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Pipeline Permissions</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>